// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render the main page Uses a Contentful integration 1`] = `
<div>
  <header
    class="header"
  >
    <div
      class="container"
    >
      <div
        class="row align-items-center text-md-left text-center"
      >
        <div
          class="col-md"
        >
          <h1
            class="text-white"
          >
            Some Body
          </h1>
          <h2
            class="text-white"
          >
            Cool Person
          </h2>
        </div>
        <div
          class="col-md-auto mt-md-0 mt-xxs d-print-none d-block"
        >
          <a
            class="btn btn-dark btn-lg"
            href="/api/pdf"
            target="_blank"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-file-pdf fa-w-12 mr-xxxs"
              data-icon="file-pdf"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 384 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M181.9 256.1c-5-16-4.9-46.9-2-46.9 8.4 0 7.6 36.9 2 46.9zm-1.7 47.2c-7.7 20.2-17.3 43.3-28.4 62.7 18.3-7 39-17.2 62.9-21.9-12.7-9.6-24.9-23.4-34.5-40.8zM86.1 428.1c0 .8 13.2-5.4 34.9-40.2-6.7 6.3-29.1 24.5-34.9 40.2zM248 160h136v328c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V24C0 10.7 10.7 0 24 0h200v136c0 13.2 10.8 24 24 24zm-8 171.8c-20-12.2-33.3-29-42.7-53.8 4.5-18.5 11.6-46.6 6.2-64.2-4.7-29.4-42.4-26.5-47.8-6.8-5 18.3-.4 44.1 8.1 77-11.6 27.6-28.7 64.6-40.8 85.8-.1 0-.1.1-.2.1-27.1 13.9-73.6 44.5-54.5 68 5.6 6.9 16 10 21.5 10 17.9 0 35.7-18 61.1-61.8 25.8-8.5 54.1-19.1 79-23.2 21.7 11.8 47.1 19.5 64 19.5 29.2 0 31.2-32 19.7-43.4-13.9-13.6-54.3-9.7-73.6-7.2zM377 105L279 7c-4.5-4.5-10.6-7-17-7h-6v128h128v-6.1c0-6.3-2.5-12.4-7-16.9zm-74.1 255.3c4.1-2.7-2.5-11.9-42.8-9 37.1 15.8 42.8 9 42.8 9z"
                fill="currentColor"
              />
            </svg>
            Download as PDF
          </a>
        </div>
      </div>
    </div>
  </header>
  <section
    class="py-sm bg-white"
  >
    <div
      class="container"
    >
      <div
        class="row"
      >
        <div
          class="col-md"
        >
          <article>
            <h3>
              <span
                class="fa-layers fa-fw mr-xxxs"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-circle fa-w-16 "
                  data-icon="circle"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
                    fill="currentColor"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-user fa-w-14 "
                  color="white"
                  data-icon="user"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  style="transform-origin: 0.4375em 0.5em;"
                  viewBox="0 0 448 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    transform="translate(224 256)"
                  >
                    <g
                      transform="translate(0, 0)  scale(0.5, 0.5)  rotate(0 0 0)"
                    >
                      <path
                        d="M224 256c70.7 0 128-57.3 128-128S294.7 0 224 0 96 57.3 96 128s57.3 128 128 128zm89.6 32h-16.7c-22.2 10.2-46.9 16-72.9 16s-50.6-5.8-72.9-16h-16.7C60.2 288 0 348.2 0 422.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-41.6c0-74.2-60.2-134.4-134.4-134.4z"
                        fill="currentColor"
                        transform="translate(-224 -256)"
                      />
                    </g>
                  </g>
                </svg>
              </span>
              About Me
            </h3>
            <p>
              Test
            </p>
          </article>
        </div>
        <div
          class="col-md mt-md-0 mt-xs"
        >
          <article>
            <h3>
              <span
                class="fa-layers fa-fw mr-xxxs"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-circle fa-w-16 "
                  data-icon="circle"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
                    fill="currentColor"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-id-card fa-w-18 "
                  color="white"
                  data-icon="id-card"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  style="transform-origin: 0.5625em 0.5em;"
                  viewBox="0 0 576 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    transform="translate(288 256)"
                  >
                    <g
                      transform="translate(0, 0)  scale(0.5, 0.5)  rotate(0 0 0)"
                    >
                      <path
                        d="M528 32H48C21.5 32 0 53.5 0 80v16h576V80c0-26.5-21.5-48-48-48zM0 432c0 26.5 21.5 48 48 48h480c26.5 0 48-21.5 48-48V128H0v304zm352-232c0-4.4 3.6-8 8-8h144c4.4 0 8 3.6 8 8v16c0 4.4-3.6 8-8 8H360c-4.4 0-8-3.6-8-8v-16zm0 64c0-4.4 3.6-8 8-8h144c4.4 0 8 3.6 8 8v16c0 4.4-3.6 8-8 8H360c-4.4 0-8-3.6-8-8v-16zm0 64c0-4.4 3.6-8 8-8h144c4.4 0 8 3.6 8 8v16c0 4.4-3.6 8-8 8H360c-4.4 0-8-3.6-8-8v-16zM176 192c35.3 0 64 28.7 64 64s-28.7 64-64 64-64-28.7-64-64 28.7-64 64-64zM67.1 396.2C75.5 370.5 99.6 352 128 352h8.2c12.3 5.1 25.7 8 39.8 8s27.6-2.9 39.8-8h8.2c28.4 0 52.5 18.5 60.9 44.2 3.2 9.9-5.2 19.8-15.6 19.8H82.7c-10.4 0-18.8-10-15.6-19.8z"
                        fill="currentColor"
                        transform="translate(-288 -256)"
                      />
                    </g>
                  </g>
                </svg>
              </span>
              Contact Information
            </h3>
            <ul
              class="list-unstyled"
            >
              <li>
                <strong>
                  Location:
                </strong>
                 
                Somewhere Only We Know
              </li>
            </ul>
          </article>
        </div>
      </div>
      <article
        class="mt-xs"
      >
        <h3>
          <span
            class="fa-layers fa-fw mr-xxxs"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-circle fa-w-16 "
              data-icon="circle"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
                fill="currentColor"
              />
            </svg>
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-check fa-w-16 "
              color="white"
              data-icon="check"
              data-prefix="fas"
              focusable="false"
              role="img"
              style="transform-origin: 0.5em 0.5em;"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                transform="translate(256 256)"
              >
                <g
                  transform="translate(0, 0)  scale(0.5, 0.5)  rotate(0 0 0)"
                >
                  <path
                    d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
                    fill="currentColor"
                    transform="translate(-256 -256)"
                  />
                </g>
              </g>
            </svg>
          </span>
          Skills & Expertise
        </h3>
        <div
          class="row mt-xxs"
        >
          <div
            class="col-lg col-print-12"
          >
            <h4
              class="h5 text-uppercase"
            >
              <span
                class="text-primary"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-star fa-w-18 "
                  data-icon="star"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 576 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                    fill="currentColor"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-star fa-w-18 secondStar"
                  data-icon="star"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 576 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                    fill="currentColor"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-star fa-w-18 thirdStar"
                  data-icon="star"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 576 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                    fill="currentColor"
                  />
                </svg>
              </span>
               
              Proficient
            </h4>
            <p>
              JavaScript ES6, TypeScript, Test Writing, Making Stuff Up
            </p>
          </div>
        </div>
      </article>
    </div>
  </section>
  <section
    class="py-sm bg-light"
  >
    <div
      class="container"
    >
      <h3>
        <span
          class="fa-layers fa-fw mr-xxxs"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-circle fa-w-16 "
            data-icon="circle"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
              fill="currentColor"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-briefcase fa-w-16 "
            color="white"
            data-icon="briefcase"
            data-prefix="fas"
            focusable="false"
            role="img"
            style="transform-origin: 0.5em 0.5em;"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              transform="translate(256 256)"
            >
              <g
                transform="translate(0, 0)  scale(0.5, 0.5)  rotate(0 0 0)"
              >
                <path
                  d="M320 336c0 8.84-7.16 16-16 16h-96c-8.84 0-16-7.16-16-16v-48H0v144c0 25.6 22.4 48 48 48h416c25.6 0 48-22.4 48-48V288H320v48zm144-208h-80V80c0-25.6-22.4-48-48-48H176c-25.6 0-48 22.4-48 48v48H48c-25.6 0-48 22.4-48 48v80h512v-80c0-25.6-22.4-48-48-48zm-144 0H192V96h128v32z"
                  fill="currentColor"
                  transform="translate(-256 -256)"
                />
              </g>
            </g>
          </svg>
        </span>
        Professional Experience
      </h3>
      <article
        class="mt-xs"
      >
        <h4
          class="d-inline-block"
        >
          <span
            class="bg-dark px-xxxs text-white rounded"
          >
            My Title
          </span>
           
          at 
          The Zebra
        </h4>
        <div>
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-calendar fa-w-14 mr-xxxs"
            data-icon="calendar"
            data-prefix="far"
            focusable="false"
            role="img"
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M400 64h-48V12c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v52H160V12c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v52H48C21.5 64 0 85.5 0 112v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V112c0-26.5-21.5-48-48-48zm-6 400H54c-3.3 0-6-2.7-6-6V160h352v298c0 3.3-2.7 6-6 6z"
              fill="currentColor"
            />
          </svg>
          February 2018
          –
          Current
        </div>
        <div
          class="mt-xxs"
        >
          <p>
            Test
          </p>
        </div>
      </article>
    </div>
  </section>
  <section
    class="py-sm bg-white"
  >
    <div
      class="container"
    >
      <h3>
        <span
          class="fa-layers fa-fw mr-xxxs"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-circle fa-w-16 "
            data-icon="circle"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
              fill="currentColor"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-graduation-cap fa-w-20 "
            color="white"
            data-icon="graduation-cap"
            data-prefix="fas"
            focusable="false"
            role="img"
            style="transform-origin: 0.625em 0.5em;"
            viewBox="0 0 640 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              transform="translate(320 256)"
            >
              <g
                transform="translate(0, 0)  scale(0.5, 0.5)  rotate(0 0 0)"
              >
                <path
                  d="M622.34 153.2L343.4 67.5c-15.2-4.67-31.6-4.67-46.79 0L17.66 153.2c-23.54 7.23-23.54 38.36 0 45.59l48.63 14.94c-10.67 13.19-17.23 29.28-17.88 46.9C38.78 266.15 32 276.11 32 288c0 10.78 5.68 19.85 13.86 25.65L20.33 428.53C18.11 438.52 25.71 448 35.94 448h56.11c10.24 0 17.84-9.48 15.62-19.47L82.14 313.65C90.32 307.85 96 298.78 96 288c0-11.57-6.47-21.25-15.66-26.87.76-15.02 8.44-28.3 20.69-36.72L296.6 284.5c9.06 2.78 26.44 6.25 46.79 0l278.95-85.7c23.55-7.24 23.55-38.36 0-45.6zM352.79 315.09c-28.53 8.76-52.84 3.92-65.59 0l-145.02-44.55L128 384c0 35.35 85.96 64 192 64s192-28.65 192-64l-14.18-113.47-145.03 44.56z"
                  fill="currentColor"
                  transform="translate(-320 -256)"
                />
              </g>
            </g>
          </svg>
        </span>
        Education
      </h3>
      <article
        class="mt-xs"
      >
        <h4
          class="d-inline-block"
        >
          B.S. in Cool Person
        </h4>
        <div>
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-university fa-w-16 mr-xxxs"
            data-icon="university"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M496 128v16a8 8 0 0 1-8 8h-24v12c0 6.627-5.373 12-12 12H60c-6.627 0-12-5.373-12-12v-12H24a8 8 0 0 1-8-8v-16a8 8 0 0 1 4.941-7.392l232-88a7.996 7.996 0 0 1 6.118 0l232 88A8 8 0 0 1 496 128zm-24 304H40c-13.255 0-24 10.745-24 24v16a8 8 0 0 0 8 8h464a8 8 0 0 0 8-8v-16c0-13.255-10.745-24-24-24zM96 192v192H60c-6.627 0-12 5.373-12 12v20h416v-20c0-6.627-5.373-12-12-12h-36V192h-64v192h-64V192h-64v192h-64V192H96z"
              fill="currentColor"
            />
          </svg>
          Cool U
        </div>
        <div
          class="mt-xxs"
        >
          <p>
            Test
          </p>
        </div>
      </article>
    </div>
  </section>
  <section
    class="py-sm bg-light"
  >
    <div
      class="container"
    >
      <article>
        <h3>
          <span
            class="fa-layers fa-fw mr-xxxs"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-circle fa-w-16 "
              data-icon="circle"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
                fill="currentColor"
              />
            </svg>
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-dice-d20 fa-w-15 "
              color="white"
              data-icon="dice-d20"
              data-prefix="fas"
              focusable="false"
              role="img"
              style="transform-origin: 0.46875em 0.5em;"
              viewBox="0 0 480 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                transform="translate(240 256)"
              >
                <g
                  transform="translate(0, 0)  scale(0.5, 0.5)  rotate(0 0 0)"
                >
                  <path
                    d="M106.75 215.06L1.2 370.95c-3.08 5 .1 11.5 5.93 12.14l208.26 22.07-108.64-190.1zM7.41 315.43L82.7 193.08 6.06 147.1c-2.67-1.6-6.06.32-6.06 3.43v162.81c0 4.03 5.29 5.53 7.41 2.09zM18.25 423.6l194.4 87.66c5.3 2.45 11.35-1.43 11.35-7.26v-65.67l-203.55-22.3c-4.45-.5-6.23 5.59-2.2 7.57zm81.22-257.78L179.4 22.88c4.34-7.06-3.59-15.25-10.78-11.14L17.81 110.35c-2.47 1.62-2.39 5.26.13 6.78l81.53 48.69zM240 176h109.21L253.63 7.62C250.5 2.54 245.25 0 240 0s-10.5 2.54-13.63 7.62L130.79 176H240zm233.94-28.9l-76.64 45.99 75.29 122.35c2.11 3.44 7.41 1.94 7.41-2.1V150.53c0-3.11-3.39-5.03-6.06-3.43zm-93.41 18.72l81.53-48.7c2.53-1.52 2.6-5.16.13-6.78l-150.81-98.6c-7.19-4.11-15.12 4.08-10.78 11.14l79.93 142.94zm79.02 250.21L256 438.32v65.67c0 5.84 6.05 9.71 11.35 7.26l194.4-87.66c4.03-1.97 2.25-8.06-2.2-7.56zm-86.3-200.97l-108.63 190.1 208.26-22.07c5.83-.65 9.01-7.14 5.93-12.14L373.25 215.06zM240 208H139.57L240 383.75 340.43 208H240z"
                    fill="currentColor"
                    transform="translate(-240 -256)"
                  />
                </g>
              </g>
            </svg>
          </span>
          Hobbies & Interests
        </h3>
        <p>
          Test
        </p>
      </article>
    </div>
  </section>
  <footer
    class="footer"
  >
    <div
      class="container"
    >
      <div
        class="row no-gutters justify-content-center"
      >
        <div
          class="col-auto"
        >
          <a
            class="d-block fa-3x"
            href="https://github.com/colinhemphill"
            rel="noopener noreferrer"
            target="_blank"
          >
            <span
              class="sr-only"
            >
              Some
               on 
              GitHub
            </span>
            <span
              class="fa-layers fa-fw"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-circle fa-w-16 "
                data-icon="circle"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
                  fill="currentColor"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-github fa-w-16 "
                color="white"
                data-icon="github"
                data-prefix="fab"
                focusable="false"
                role="img"
                style="transform-origin: 0.484375em 0.5em;"
                viewBox="0 0 496 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  transform="translate(248 256)"
                >
                  <g
                    transform="translate(0, 0)  scale(0.5, 0.5)  rotate(0 0 0)"
                  >
                    <path
                      d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"
                      fill="currentColor"
                      transform="translate(-248 -256)"
                    />
                  </g>
                </g>
              </svg>
            </span>
          </a>
        </div>
      </div>
      <div
        class="mt-xxs"
      >
        Copyright ©
        2020
         
        Some Body
      </div>
      <div
        class="mt-xxxs"
      >
        <small>
          This résumé was generated with
           
          <a
            class="footerLink"
            href="https://nextjs.org/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Next.js
          </a>
           
          and
           
          <a
            class="footerLink"
            href="https://www.contentful.com/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Contentful
          </a>
          , and deployed on
           
          <a
            class="footerLink"
            href="https://vercel.com/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Vercel
          </a>
          . Learn how to deploy your own resume with the
           
          <a
            class="footerLink"
            href="https://github.com/colinhemphill/nextjs-resume-generator"
            rel="noopener noreferrer"
            target="_blank"
          >
            nextjs-resume-generator
          </a>
          !
        </small>
      </div>
    </div>
  </footer>
</div>
`;

exports[`Render the main page Uses a Prismic integration 1`] = `
<div>
  <header
    class="header"
  >
    <div
      class="container"
    >
      <div
        class="row align-items-center text-md-left text-center"
      >
        <div
          class="col-md"
        >
          <h1
            class="text-white"
          >
            Some Body
          </h1>
          <h2
            class="text-white"
          >
            Cool Person
          </h2>
        </div>
        <div
          class="col-md-auto mt-md-0 mt-xxs d-print-none d-block"
        >
          <a
            class="btn btn-dark btn-lg"
            href="/api/pdf"
            target="_blank"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-file-pdf fa-w-12 mr-xxxs"
              data-icon="file-pdf"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 384 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M181.9 256.1c-5-16-4.9-46.9-2-46.9 8.4 0 7.6 36.9 2 46.9zm-1.7 47.2c-7.7 20.2-17.3 43.3-28.4 62.7 18.3-7 39-17.2 62.9-21.9-12.7-9.6-24.9-23.4-34.5-40.8zM86.1 428.1c0 .8 13.2-5.4 34.9-40.2-6.7 6.3-29.1 24.5-34.9 40.2zM248 160h136v328c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V24C0 10.7 10.7 0 24 0h200v136c0 13.2 10.8 24 24 24zm-8 171.8c-20-12.2-33.3-29-42.7-53.8 4.5-18.5 11.6-46.6 6.2-64.2-4.7-29.4-42.4-26.5-47.8-6.8-5 18.3-.4 44.1 8.1 77-11.6 27.6-28.7 64.6-40.8 85.8-.1 0-.1.1-.2.1-27.1 13.9-73.6 44.5-54.5 68 5.6 6.9 16 10 21.5 10 17.9 0 35.7-18 61.1-61.8 25.8-8.5 54.1-19.1 79-23.2 21.7 11.8 47.1 19.5 64 19.5 29.2 0 31.2-32 19.7-43.4-13.9-13.6-54.3-9.7-73.6-7.2zM377 105L279 7c-4.5-4.5-10.6-7-17-7h-6v128h128v-6.1c0-6.3-2.5-12.4-7-16.9zm-74.1 255.3c4.1-2.7-2.5-11.9-42.8-9 37.1 15.8 42.8 9 42.8 9z"
                fill="currentColor"
              />
            </svg>
            Download as PDF
          </a>
        </div>
      </div>
    </div>
  </header>
  <section
    class="py-sm bg-white"
  >
    <div
      class="container"
    >
      <div
        class="row"
      >
        <div
          class="col-md"
        >
          <article>
            <h3>
              <span
                class="fa-layers fa-fw mr-xxxs"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-circle fa-w-16 "
                  data-icon="circle"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
                    fill="currentColor"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-user fa-w-14 "
                  color="white"
                  data-icon="user"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  style="transform-origin: 0.4375em 0.5em;"
                  viewBox="0 0 448 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    transform="translate(224 256)"
                  >
                    <g
                      transform="translate(0, 0)  scale(0.5, 0.5)  rotate(0 0 0)"
                    >
                      <path
                        d="M224 256c70.7 0 128-57.3 128-128S294.7 0 224 0 96 57.3 96 128s57.3 128 128 128zm89.6 32h-16.7c-22.2 10.2-46.9 16-72.9 16s-50.6-5.8-72.9-16h-16.7C60.2 288 0 348.2 0 422.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-41.6c0-74.2-60.2-134.4-134.4-134.4z"
                        fill="currentColor"
                        transform="translate(-224 -256)"
                      />
                    </g>
                  </g>
                </svg>
              </span>
              About Me
            </h3>
            <p>
              An About Me description.
            </p>
          </article>
        </div>
        <div
          class="col-md mt-md-0 mt-xs"
        >
          <article>
            <h3>
              <span
                class="fa-layers fa-fw mr-xxxs"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-circle fa-w-16 "
                  data-icon="circle"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
                    fill="currentColor"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-id-card fa-w-18 "
                  color="white"
                  data-icon="id-card"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  style="transform-origin: 0.5625em 0.5em;"
                  viewBox="0 0 576 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    transform="translate(288 256)"
                  >
                    <g
                      transform="translate(0, 0)  scale(0.5, 0.5)  rotate(0 0 0)"
                    >
                      <path
                        d="M528 32H48C21.5 32 0 53.5 0 80v16h576V80c0-26.5-21.5-48-48-48zM0 432c0 26.5 21.5 48 48 48h480c26.5 0 48-21.5 48-48V128H0v304zm352-232c0-4.4 3.6-8 8-8h144c4.4 0 8 3.6 8 8v16c0 4.4-3.6 8-8 8H360c-4.4 0-8-3.6-8-8v-16zm0 64c0-4.4 3.6-8 8-8h144c4.4 0 8 3.6 8 8v16c0 4.4-3.6 8-8 8H360c-4.4 0-8-3.6-8-8v-16zm0 64c0-4.4 3.6-8 8-8h144c4.4 0 8 3.6 8 8v16c0 4.4-3.6 8-8 8H360c-4.4 0-8-3.6-8-8v-16zM176 192c35.3 0 64 28.7 64 64s-28.7 64-64 64-64-28.7-64-64 28.7-64 64-64zM67.1 396.2C75.5 370.5 99.6 352 128 352h8.2c12.3 5.1 25.7 8 39.8 8s27.6-2.9 39.8-8h8.2c28.4 0 52.5 18.5 60.9 44.2 3.2 9.9-5.2 19.8-15.6 19.8H82.7c-10.4 0-18.8-10-15.6-19.8z"
                        fill="currentColor"
                        transform="translate(-288 -256)"
                      />
                    </g>
                  </g>
                </svg>
              </span>
              Contact Information
            </h3>
            <ul
              class="list-unstyled"
            >
              <li>
                <strong>
                  Location:
                </strong>
                 
                Somewhere Only We Know
              </li>
            </ul>
          </article>
        </div>
      </div>
      <article
        class="mt-xs"
      >
        <h3>
          <span
            class="fa-layers fa-fw mr-xxxs"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-circle fa-w-16 "
              data-icon="circle"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
                fill="currentColor"
              />
            </svg>
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-check fa-w-16 "
              color="white"
              data-icon="check"
              data-prefix="fas"
              focusable="false"
              role="img"
              style="transform-origin: 0.5em 0.5em;"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                transform="translate(256 256)"
              >
                <g
                  transform="translate(0, 0)  scale(0.5, 0.5)  rotate(0 0 0)"
                >
                  <path
                    d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
                    fill="currentColor"
                    transform="translate(-256 -256)"
                  />
                </g>
              </g>
            </svg>
          </span>
          Skills & Expertise
        </h3>
        <div
          class="row mt-xxs"
        >
          <div
            class="col-lg col-print-12"
          >
            <h4
              class="h5 text-uppercase"
            >
              <span
                class="text-primary"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-star fa-w-18 "
                  data-icon="star"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 576 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                    fill="currentColor"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-star fa-w-18 secondStar"
                  data-icon="star"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 576 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                    fill="currentColor"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-star fa-w-18 thirdStar"
                  data-icon="star"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 576 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                    fill="currentColor"
                  />
                </svg>
              </span>
               
              Proficient
            </h4>
            <p>
              JavaScript ES6, TypeScript, Test Writing, Making Stuff Up
            </p>
          </div>
        </div>
      </article>
    </div>
  </section>
  <section
    class="py-sm bg-light"
  >
    <div
      class="container"
    >
      <h3>
        <span
          class="fa-layers fa-fw mr-xxxs"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-circle fa-w-16 "
            data-icon="circle"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
              fill="currentColor"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-briefcase fa-w-16 "
            color="white"
            data-icon="briefcase"
            data-prefix="fas"
            focusable="false"
            role="img"
            style="transform-origin: 0.5em 0.5em;"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              transform="translate(256 256)"
            >
              <g
                transform="translate(0, 0)  scale(0.5, 0.5)  rotate(0 0 0)"
              >
                <path
                  d="M320 336c0 8.84-7.16 16-16 16h-96c-8.84 0-16-7.16-16-16v-48H0v144c0 25.6 22.4 48 48 48h416c25.6 0 48-22.4 48-48V288H320v48zm144-208h-80V80c0-25.6-22.4-48-48-48H176c-25.6 0-48 22.4-48 48v48H48c-25.6 0-48 22.4-48 48v80h512v-80c0-25.6-22.4-48-48-48zm-144 0H192V96h128v32z"
                  fill="currentColor"
                  transform="translate(-256 -256)"
                />
              </g>
            </g>
          </svg>
        </span>
        Professional Experience
      </h3>
      <article
        class="mt-xs"
      >
        <h4
          class="d-inline-block"
        >
          <span
            class="bg-dark px-xxxs text-white rounded"
          >
            My Title
          </span>
           
          at 
          The Zebra
        </h4>
        <div>
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-calendar fa-w-14 mr-xxxs"
            data-icon="calendar"
            data-prefix="far"
            focusable="false"
            role="img"
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M400 64h-48V12c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v52H160V12c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v52H48C21.5 64 0 85.5 0 112v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V112c0-26.5-21.5-48-48-48zm-6 400H54c-3.3 0-6-2.7-6-6V160h352v298c0 3.3-2.7 6-6 6z"
              fill="currentColor"
            />
          </svg>
          February 2018
          –
          Current
        </div>
        <div
          class="mt-xxs"
        >
          <p>
            A description of my role
          </p>
        </div>
      </article>
    </div>
  </section>
  <section
    class="py-sm bg-white"
  >
    <div
      class="container"
    >
      <h3>
        <span
          class="fa-layers fa-fw mr-xxxs"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-circle fa-w-16 "
            data-icon="circle"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
              fill="currentColor"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-graduation-cap fa-w-20 "
            color="white"
            data-icon="graduation-cap"
            data-prefix="fas"
            focusable="false"
            role="img"
            style="transform-origin: 0.625em 0.5em;"
            viewBox="0 0 640 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              transform="translate(320 256)"
            >
              <g
                transform="translate(0, 0)  scale(0.5, 0.5)  rotate(0 0 0)"
              >
                <path
                  d="M622.34 153.2L343.4 67.5c-15.2-4.67-31.6-4.67-46.79 0L17.66 153.2c-23.54 7.23-23.54 38.36 0 45.59l48.63 14.94c-10.67 13.19-17.23 29.28-17.88 46.9C38.78 266.15 32 276.11 32 288c0 10.78 5.68 19.85 13.86 25.65L20.33 428.53C18.11 438.52 25.71 448 35.94 448h56.11c10.24 0 17.84-9.48 15.62-19.47L82.14 313.65C90.32 307.85 96 298.78 96 288c0-11.57-6.47-21.25-15.66-26.87.76-15.02 8.44-28.3 20.69-36.72L296.6 284.5c9.06 2.78 26.44 6.25 46.79 0l278.95-85.7c23.55-7.24 23.55-38.36 0-45.6zM352.79 315.09c-28.53 8.76-52.84 3.92-65.59 0l-145.02-44.55L128 384c0 35.35 85.96 64 192 64s192-28.65 192-64l-14.18-113.47-145.03 44.56z"
                  fill="currentColor"
                  transform="translate(-320 -256)"
                />
              </g>
            </g>
          </svg>
        </span>
        Education
      </h3>
      <article
        class="mt-xs"
      >
        <h4
          class="d-inline-block"
        >
          B.S. in Cool Person
        </h4>
        <div>
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-university fa-w-16 mr-xxxs"
            data-icon="university"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M496 128v16a8 8 0 0 1-8 8h-24v12c0 6.627-5.373 12-12 12H60c-6.627 0-12-5.373-12-12v-12H24a8 8 0 0 1-8-8v-16a8 8 0 0 1 4.941-7.392l232-88a7.996 7.996 0 0 1 6.118 0l232 88A8 8 0 0 1 496 128zm-24 304H40c-13.255 0-24 10.745-24 24v16a8 8 0 0 0 8 8h464a8 8 0 0 0 8-8v-16c0-13.255-10.745-24-24-24zM96 192v192H60c-6.627 0-12 5.373-12 12v20h416v-20c0-6.627-5.373-12-12-12h-36V192h-64v192h-64V192h-64v192h-64V192H96z"
              fill="currentColor"
            />
          </svg>
          Cool U
        </div>
        <div
          class="mt-xxs"
        >
          <p>
            A description of my education
          </p>
        </div>
      </article>
    </div>
  </section>
  <section
    class="py-sm bg-light"
  >
    <div
      class="container"
    >
      <article>
        <h3>
          <span
            class="fa-layers fa-fw mr-xxxs"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-circle fa-w-16 "
              data-icon="circle"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
                fill="currentColor"
              />
            </svg>
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-dice-d20 fa-w-15 "
              color="white"
              data-icon="dice-d20"
              data-prefix="fas"
              focusable="false"
              role="img"
              style="transform-origin: 0.46875em 0.5em;"
              viewBox="0 0 480 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                transform="translate(240 256)"
              >
                <g
                  transform="translate(0, 0)  scale(0.5, 0.5)  rotate(0 0 0)"
                >
                  <path
                    d="M106.75 215.06L1.2 370.95c-3.08 5 .1 11.5 5.93 12.14l208.26 22.07-108.64-190.1zM7.41 315.43L82.7 193.08 6.06 147.1c-2.67-1.6-6.06.32-6.06 3.43v162.81c0 4.03 5.29 5.53 7.41 2.09zM18.25 423.6l194.4 87.66c5.3 2.45 11.35-1.43 11.35-7.26v-65.67l-203.55-22.3c-4.45-.5-6.23 5.59-2.2 7.57zm81.22-257.78L179.4 22.88c4.34-7.06-3.59-15.25-10.78-11.14L17.81 110.35c-2.47 1.62-2.39 5.26.13 6.78l81.53 48.69zM240 176h109.21L253.63 7.62C250.5 2.54 245.25 0 240 0s-10.5 2.54-13.63 7.62L130.79 176H240zm233.94-28.9l-76.64 45.99 75.29 122.35c2.11 3.44 7.41 1.94 7.41-2.1V150.53c0-3.11-3.39-5.03-6.06-3.43zm-93.41 18.72l81.53-48.7c2.53-1.52 2.6-5.16.13-6.78l-150.81-98.6c-7.19-4.11-15.12 4.08-10.78 11.14l79.93 142.94zm79.02 250.21L256 438.32v65.67c0 5.84 6.05 9.71 11.35 7.26l194.4-87.66c4.03-1.97 2.25-8.06-2.2-7.56zm-86.3-200.97l-108.63 190.1 208.26-22.07c5.83-.65 9.01-7.14 5.93-12.14L373.25 215.06zM240 208H139.57L240 383.75 340.43 208H240z"
                    fill="currentColor"
                    transform="translate(-240 -256)"
                  />
                </g>
              </g>
            </svg>
          </span>
          Hobbies & Interests
        </h3>
        <p>
          My hobbies.
        </p>
      </article>
    </div>
  </section>
  <footer
    class="footer"
  >
    <div
      class="container"
    >
      <div
        class="row no-gutters justify-content-center"
      >
        <div
          class="col-auto"
        >
          <a
            class="d-block fa-3x"
            href="https://github.com/colinhemphill"
            rel="noopener noreferrer"
            target="_blank"
          >
            <span
              class="sr-only"
            >
              Some
               on 
              GitHub
            </span>
            <span
              class="fa-layers fa-fw"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-circle fa-w-16 "
                data-icon="circle"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
                  fill="currentColor"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-github fa-w-16 "
                color="white"
                data-icon="github"
                data-prefix="fab"
                focusable="false"
                role="img"
                style="transform-origin: 0.484375em 0.5em;"
                viewBox="0 0 496 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  transform="translate(248 256)"
                >
                  <g
                    transform="translate(0, 0)  scale(0.5, 0.5)  rotate(0 0 0)"
                  >
                    <path
                      d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"
                      fill="currentColor"
                      transform="translate(-248 -256)"
                    />
                  </g>
                </g>
              </svg>
            </span>
          </a>
        </div>
      </div>
      <div
        class="mt-xxs"
      >
        Copyright ©
        2020
         
        Some Body
      </div>
      <div
        class="mt-xxxs"
      >
        <small>
          This résumé was generated with
           
          <a
            class="footerLink"
            href="https://nextjs.org/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Next.js
          </a>
           
          and
           
          <a
            class="footerLink"
            href="https://prismic.io/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Prismic
          </a>
          , and deployed on
           
          <a
            class="footerLink"
            href="https://vercel.com/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Vercel
          </a>
          . Learn how to deploy your own resume with the
           
          <a
            class="footerLink"
            href="https://github.com/colinhemphill/nextjs-resume-generator"
            rel="noopener noreferrer"
            target="_blank"
          >
            nextjs-resume-generator
          </a>
          !
        </small>
      </div>
    </div>
  </footer>
</div>
`;
